[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/UserInterface/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main/Game.gd" type="Script" id=2]
[ext_resource path="res://src/Level/Level.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/art/coin/coin.png" type="Texture" id=5]
[ext_resource path="res://src/Main/InterfaceLayer.gd" type="Script" id=6]
[ext_resource path="res://assets/theme/fonts/kenney_mini_square.tres" type="DynamicFontData" id=7]
[ext_resource path="res://SW/heart2.png" type="Texture" id=8]
[ext_resource path="res://src/Main/HealthBar.gd" type="Script" id=9]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": true,
"name": "coin_spinning",
"speed": 6.5
} ]

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 7 )

[node name="Game" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Level" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="Level" instance=ExtResource( 4 )]
position = Vector2( 90, 546 )

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
layer = 100
script = ExtResource( 6 )

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 1 )]
visible = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="InterfaceLayer"]
position = Vector2( 49, 38 )
scale = Vector2( 5.7, 5.7 )
frames = SubResource( 6 )
animation = "coin_spinning"

[node name="Coin" type="Label" parent="InterfaceLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 59.0
margin_top = 13.0
margin_right = -664.0
margin_bottom = -417.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "100"
align = 2
valign = 1
autowrap = true

[node name="HealthBar" type="TextureProgress" parent="InterfaceLayer"]
margin_left = 651.0
margin_top = -7.0
margin_right = 1851.0
margin_bottom = 1090.0
rect_scale = Vector2( 0.1, 0.1 )
max_value = 3.0
value = 3.0
texture_progress = ExtResource( 8 )
script = ExtResource( 9 )

[connection signal="health_change" from="Level/Player" to="InterfaceLayer/HealthBar" method="_on_Player_health_change"]
